--- a/index.html
+++ b/index.html
@@ -1,20 +1,15 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Redirecting to Codeforces</title>
-    <meta
-      http-equiv="refresh"
-      content="0; URL=https://codeforces.com/profile/farhan_pavel3"
-    />
+<head>
+    <title>Farhan Pavel - Codeforces Profile</title>
+    <meta name="description" content="Competitive programming profile on Codeforces">
+    <meta http-equiv="refresh" content="0; url=https://codeforces.com/profile/farhan_pavel3">
     <link rel="canonical" href="https://codeforces.com/profile/farhan_pavel3" />
-  </head>
-  <body>
-    <p>
-      Redirecting to
-      <a href="https://codeforces.com/profile/farhan_pavel3"
-        >Codeforces profile</a
-      >...
-    </p>
-  </body>
+    <script>
+        window.location.href = "https://codeforces.com/profile/farhan_pavel3";
+    </script>
+</head>
+<body>
+    <p>Redirecting to <a href="https://codeforces.com/profile/farhan_pavel3">Codeforces profile</a>...</p>
+</body>
 </html>
